Added XML interactions

--- a/ProgCLICourse/App.config
+++ b/ProgCLICourse/App.config
@@ -3,4 +3,10 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+
+  <appSettings>
+    <add key="howtoXML" value="XML_doc"/>
+    <!--<add key="howtoXML" value="XML_LINQ"/>-->
+    <!--<add key="howtoXML" value="XML_serialization"/>-->
+  </appSettings>
 </configuration>
