--- a/ProgCLICourse/ProgCLICourse.csproj
+++ b/ProgCLICourse/ProgCLICourse.csproj
@@ -63,6 +63,11 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="XML_XML.cs" />
     <Compile Include="ShoppingListXMLSchema.cs">
       <DependentUpon>ShoppingListXMLSchema.xsd</DependentUpon>
@@ -82,6 +87,12 @@
     <None Include="ShoppingListXMLSchema.xsd">
       <SubType>Designer</SubType>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
